# trynocular

./: .gitmodules  CHANGELOG.md  Probabilities.md  README.md  cabal.project  default.nix  trynocular.cabal
app/: Main.hs
nix/: sources.json
src/: Demo.hs  Trynocular.hs
src/Trynocular/: Generable.hs  Generator.hs  Key.hs  PartialKeySet.hs  Quantiler.hs  Standardizer.hs  TestHarness.hs
test/: Main.hs  StrictUtil.hs
