cabal-version:      2.4
name:               trynocular
version:            0.1.0.0
-- synopsis:
-- description:
-- category:
bug-reports:        https://github.com/shapr/trynocular/issues
license:            MIT
author:             Shae Erisson and Chris Smith
maintainer:         shae@scannedinavian.com

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:  Trynocular
                    , Trynocular.Generable
                    , Trynocular.Generator
                    , Trynocular.Key
                    , Trynocular.PartialKeySet
    build-depends:    base
                    , random
                    , semigroupoids
                    , universe-base
    hs-source-dirs:   src
    default-language: GHC2021
    ghc-options:      -Wall

test-suite trynocular-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base
                    , hspec
                    , trynocular
                    , QuickCheck
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall
